<resources>
    <string name="app_name">Scrabble Game</string>
    <string name="create">Создать</string>
    <string name="join">Присоединиться</string>
    <string name="rules">Правила игры</string>
    <string name="about">О программе</string>
    <string name="row">row</string>
    <string name="col">col</string>
    <string name="create_session">Создайте id игровой сессии</string>
    <string name="join_session">Введите id игровой сессии</string>
    <string name="wait_users">Ожидание игрока…</string>
    <string name="pass">Пропустить</string>
    <string name="submit">Сделать ход</string>
    <string name="swap">Заменить буквы</string>
    <string name="name">Введите Ваше имя</string>
    <string name="loading">Загрузка</string>
    <string name="session_exit">Вы хотите выйти из игры?</string>
    <string name="game_over">Игра окончена</string>
    <string name="rules_text">Игровое поле состоит из 15×15, то есть 225 квадратов, на которые участники игры
выкладывают буквы, составляя тем самым слова. В начале игры каждый игрок получает 7
случайных букв (всего их в игре 104). Через центральную клетку игрового поля по
горизонтали или вертикали выкладывается первое слово, затем следующий игрок может
добавить слово «на пересечение» из своих букв. Слова выкладываются либо слева
направо, либо сверху вниз. Каждый игрок стремится выиграть игру, создавая больше слов
на основе имеющихся фишек с буквами.\n
Разрешается использовать все слова, приведённые в стандартном словаре языка, за
исключением:\n
- слов, пишущихся с заглавных букв;\n
- сокращений;\n
- слов, которые пишутся через апостроф;\n
- слов, которые пишутся через дефис.\n
\n
Описание процесса игры:\n
В начале игры каждому даётся по 7 фишек. За один ход можно составить несколько
слов. Каждое новое слово должно соприкасаться или иметь общую букву (или буквы)
с ранее составленными словами. Слова должны читаться слева направо (по
горизонтали) и сверху вниз (по вертикали).\n
Первое составленное слово должно проходить через центральную клетку.\n
Если игрок не хочет или не может составить ни одного слова, — он имеет право
поменять любое количество своих букв, пропустив при этом ход.\n
Любая последовательность букв по горизонтали и вертикали должна являться словом.
То есть в игре не допускается появление на поле случайных буквосочетаний, не
представляющих собою слов, соответствующих вышеприведённым критериям.\n
После каждого хода необходимо добрать новых букв до семи.\n
Игра заканчивается в следующих случаях:\n
- когда у одного из игроков кончаются фишки на руках, и при этом нет больше
фишек для добора (все они на руках или на поле);\n
- когда все игроки последовательно пропустили ход два круга подряд.</string>
    <string name="about_text">Выполнено студентом БПИ111 Ивановым Иваном в качестве курсовой работы.</string>
</resources>